--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,35 +1,35 @@
 {
-    "name": "Helm Training Labs",
-    "image": "quay.io/kubermatic-labs/devcontainers:helm-cb99c75",
-    "customizations": {
-      "vscode": {
-        "settings": {
-          "workbench.editorAssociations": {
-            "*.md": "vscode.markdown.preview.editor"
-          },
-          "files.exclude": {
-            ".git/": true,
-            ".github/": true,
-            ".devcontainer/": true,
-            ".99_todos/": true
-          }
+  "name": "Helm Training Labs",
+  "image": "quay.io/kubermatic-labs/training-ghcs-kubernetes-helm-trainee-environment:1.0.0",
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "workbench.editorAssociations": {
+          "*.md": "vscode.markdown.preview.editor"
+        },
+        "files.exclude": {
+          ".git/": true,
+          ".github/": true,
+          ".devcontainer/": true,
+          ".99_todos/": true
         }
       }
-    },
-    "features": {
-      "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-        "enableNonRootDocker": "true",
-        "moby": "true"
-      }
-    },
-    "remoteUser": "root",
-    "runArgs": [
-      "--network=host"
-    ],
-    "forwardPorts": [
-      8080,
-      80,
-      443
-    ],
-    "postCreateCommand": "/setup_kind_cluster.sh"
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+      "enableNonRootDocker": "true",
+      "moby": "true"
+    }
+  },
+  "remoteUser": "root",
+  "runArgs": [
+    "--network=host"
+  ],
+  "forwardPorts": [
+    8080,
+    80,
+    443
+  ],
+  "postCreateCommand": "/setup_kind_cluster.sh"
 }
