--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Helm Training Labs",
+  "name": "Kubernetes Helm Training Labs",
   "image": "quay.io/kubermatic-labs/training-ghcs-kubernetes-helm-trainee-environment:1.0.0",
   "customizations": {
     "vscode": {
