make use of new devcontainer image, consolidate .trainingrc, ignore files for trainees in ide

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
           ".devcontainer/": true,
           ".99_todos/": true,
           "pre-checks.sh": true,
-          "makefile": true,
+          "makefile": true
         }
       }
     }
